# text-embedding-service

./: Dockerfile  README.md  benchmark.py  pyproject.toml
app/: endpoints.py  main.py  model.py
